			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.science.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Handle seek/4 to negative positions in the object (now throws
    a domain error).

  * ADDED: Arithmetic function +/1.  Mike Elston,

  * FIXED: nicely maintain time in profiler/2, which is used by tprofile/1.

  * ADDED: library(error): types positive_integer and negative_integer.

  * ADDED: library(thread), providing some high-level concurrency
    predicates.

  * FIXED: Bug#291: format_time/3 using %Z for different character
    sets.  I'm not sure about this fix.  I cannot reproduce the problem.
    New code is definitely cleaner though.  [2nd try]. Dmitry?

  * ADDED: Allow for unquoted a/b in file-specifications for
    absolute_file_name/3 and derived predicates.  E.g. 
    :- use_module(library(semweb/rdf_db)).

=============================
VERSION 5.6.36 (Jun 20, 2007)
=============================

  * FIXED: More reliable handling of stack overflows.  Notably fixed
    problems running out of stack multiple times.  In particulary important
    for continuously running servers executing queries that may run out
    of stack.

  * ADDED: Library settings.pl for distributed management of application
    settings.  Contributed from MultiMedian project.

============================
VERSION 5.6.35 (Jun 6, 2007)
============================

  * FIXED: Added lacking library(main) to Windows version.  Win32 installer
    only; sources and Win64 installer will follow in 5.6.36.

  * FIXED: Posible argument-stack issue, notably associated to destructive
    assignment.  Tom Schrijver.

  * FIXED: Error in handling signals in Prolog.  Now caused immediate
    assertion failure due to strickter checking.

  * FIXED: Bug#283 plld.exe sets __WINDOWS__ rather then WIN32.
